src/objects/inscor__Assistant_Result__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Assistant Results</relationshipLabel>
        <relationshipName>Assistant_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Assistant Results</relationshipLabel>
        <relationshipName>Assistant_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Customer_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Quote</label>
        <referenceTo>inscor__Customer_Quote__c</referenceTo>
        <relationshipLabel>Assistant Results</relationshipLabel>
        <relationshipName>Assistant_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Inventory_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Line</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipLabel>Assistant Results</relationshipLabel>
        <relationshipName>Assistant_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Assistant Results</relationshipLabel>
        <relationshipName>Assistant_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>inscor__Purchase_Order__c</referenceTo>
        <relationshipLabel>Assistant Results</relationshipLabel>
        <relationshipName>Assistant_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__RFQ__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFQ</label>
        <referenceTo>inscor__RFQ__c</referenceTo>
        <relationshipLabel>Assistant Results</relationshipLabel>
        <relationshipName>Assistant_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>inscor__Release__c</referenceTo>
        <relationshipLabel>Assistant Results</relationshipLabel>
        <relationshipName>Assistant_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order</label>
        <referenceTo>inscor__Repair_Order__c</referenceTo>
        <relationshipLabel>Assistant Results</relationshipLabel>
        <relationshipName>Assistant_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Result_Item__c</fullName>
        <label>Result Item</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Part Number</fullName>
                </value>
                <value>
                    <fullName>Inventory line</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
                <value>
                    <fullName>RFQ</fullName>
                </value>
                <value>
                    <fullName>Purchase Order</fullName>
                </value>
                <value>
                    <fullName>Customer Quote</fullName>
                </value>
                <value>
                    <fullName>Repair Order</fullName>
                </value>
                <value>
                    <fullName>Sales Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Result_Reason__c</fullName>
        <label>Result Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>inscor__Sales_Order__c</referenceTo>
        <relationshipLabel>Assistant Results</relationshipLabel>
        <relationshipName>Assistant_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Setting_Triggered__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Setting Triggered</label>
        <referenceTo>inscor__Assistant_Setting__c</referenceTo>
        <relationshipLabel>Assistant Results</relationshipLabel>
        <relationshipName>Assistant_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Silenced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Silenced?</label>
        <type>Checkbox</type>
    </fields>
    <label>Assistant Result</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Assigned_To__c</columns>
        <columns>inscor__Purchase_Order__c</columns>
        <columns>inscor__Customer_Quote__c</columns>
        <columns>inscor__Repair_Order__c</columns>
        <columns>inscor__Sales_Order__c</columns>
        <columns>inscor__Setting_Triggered__c</columns>
        <columns>inscor__Result_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AID-{0}</displayFormat>
        <label>Assistant Result ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assistant Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>